Implemented koin and jetpack navigation to project

--- a/app/src/main/res/layout/fragment_new_task.xml
+++ b/app/src/main/res/layout/fragment_new_task.xml
@@ -13,7 +13,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_baseline_navigate_before_24"
-        app:title="Criar Tarefa" />
+        app:title="@string/create_task" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_title"
@@ -23,7 +23,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:background="@color/white"
-        android:hint="Titulo"
+        android:hint="@string/title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_back_button">
@@ -46,7 +46,7 @@
         android:layout_marginEnd="32dp"
         android:background="@color/white"
         android:gravity="start"
-        android:hint="Descrição"
+        android:hint="@string/description"
         android:textAlignment="textStart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,7 +72,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:background="@color/white"
-        android:hint="Data"
+        android:hint="@string/date"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/til_desc"
@@ -96,7 +96,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="16dp"
         android:background="@color/white"
-        android:hint="Hora"
+        android:hint="@string/time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/til_desc"
@@ -125,7 +125,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
-        android:text="Cancelar"
+        android:text="@string/cancel"
         app:layout_constraintBottom_toTopOf="@+id/btn_create_task"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -138,7 +138,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
-        android:text="Criar tarefa"
+        android:text="@string/create_task"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
