--- a/app/src/main/res/layout/fragment_new_task.xml
+++ b/app/src/main/res/layout/fragment_new_task.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar_back_button">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txv_title"
+            android:id="@+id/edt_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white" />
@@ -53,7 +53,7 @@
         app:layout_constraintTop_toBottomOf="@+id/til_title">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txv_desc"
+            android:id="@+id/edt_desc"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
@@ -79,7 +79,7 @@
         app:startIconDrawable="@drawable/ic_baseline_calendar_today_24">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txv_date"
+            android:id="@+id/edt_date"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white" />
@@ -103,7 +103,7 @@
         app:startIconDrawable="@drawable/ic_baseline_access_time_24">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txv_time"
+            android:id="@+id/edt_time"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white" />
