--- a/app/src/main/res/layout/fragment_new_task.xml
+++ b/app/src/main/res/layout/fragment_new_task.xml
@@ -118,6 +118,23 @@
         app:layout_constraintGuide_begin="202dp" />
 
     <com.google.android.material.button.MaterialButton
+        app:backgroundTint="@color/red"
+        android:id="@+id/btn_delete_task"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/delete"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/btn_cancel_task"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:visibility="visible" />
+
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_cancel_task"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="0dp"
